[package]
name = "pgrx"
version = "0.9.0"
authors = ["ZomboDB, LLC <zombodb@gmail.com>"]
license = "MIT"
description = "pgrx:  A Rust framework for creating Postgres extensions"
homepage = "https://github.com/tcdi/pgrx"
repository = "https://github.com/tcdi/pgrx"
documentation = "https://docs.rs/pgrx"
categories = ["database"]
keywords = ["database", "postgres", "postgresql", "extension"]
readme = "../README.md"
edition = "2021"

[lib]
crate-type = [ "rlib" ]

[features]
default = [ "cshim" ]
cshim = [ "pgrx-pg-sys/cshim" ]
pg11 = [ "pgrx-pg-sys/pg11" ]
pg12 = [ "pgrx-pg-sys/pg12" ]
pg13 = [ "pgrx-pg-sys/pg13" ]
pg14 = [ "pgrx-pg-sys/pg14" ]
pg15 = [ "pgrx-pg-sys/pg15" ]
no-schema-generation = ["pgrx-macros/no-schema-generation", "pgrx-sql-entity-graph/no-schema-generation"]
unsafe-postgres = []     # when trying to compile against something that looks like Postgres but claims to be diffent

[package.metadata.docs.rs]
features = ["pg14", "cshim"]
no-default-features = true
# Enable `#[cfg(docsrs)]` (https://docs.rs/about/builds#cross-compiling)
rustc-args = ["--cfg", "docsrs"]

[dependencies]
pgrx-macros = { path = "../pgrx-macros", version = "=0.9.0" }
pgrx-pg-sys = { path = "../pgrx-pg-sys", version = "=0.9.0" }
pgrx-sql-entity-graph = { path = "../pgrx-sql-entity-graph", version = "=0.9.0" }

# used to internally impl things
once_cell = "1.17.1" # polyfill until std::lazy::OnceCell stabilizes
seq-macro = "0.3" # impls loops in macros
uuid = { version = "1.3.3", features = [ "v4" ] } # PgLwLock and shmem
enum-map = "2.5.0"

# error handling and logging
thiserror = "1.0"

# exposed in public API
atomic-traits = "0.3.0" # PgAtomic and shmem init
bitflags = "2.3.1" # BackgroundWorker
bitvec = "1.0" # processing array nullbitmaps
heapless = "0.7.16" # shmem and PgLwLock
libc = "0.2.144" # FFI type compat
seahash = "4.1.0" # derive(PostgresHash)
serde = { version = "1.0.163", features = [ "derive" ] } # impls on pub types
serde_cbor = "0.11.2" # derive(PostgresType)
serde_json = "1.0.96" # everything JSON
time = { version = "0.3.21", features = ["formatting", "parsing", "alloc", "macros"], optional = true }

