[package]
name = "pgx-macros"
version = "0.5.3"
authors = ["ZomboDB, LLC <zombodb@gmail.com>"]
license = "MIT"
description = "Proc Macros for 'pgx'"
homepage = "https://github.com/zombodb/pgx"
repository = "https://github.com/zombodb/pgx"
documentation = "https://docs.rs/pgx-macros"
readme = "README.md"
edition = "2021"

[lib]
proc-macro = true

[package.metadata.docs.rs]
# Enable `#[cfg(docsrs)]` (https://docs.rs/about/builds#cross-compiling)
rustc-args = ["--cfg", "docsrs"]

[dependencies]
pgx-utils = { path = "../pgx-utils", version = "=0.5.3" }
proc-macro2 = "1.0.47"
quote = "1.0.21"
syn = { version = "1.0.102", features = [ "extra-traits", "full", "fold", "parsing" ] }
unescape = "0.1.0"

[dev-dependencies]
serde = { version = "1.0.145", features = ["derive"] }
