[package]
name = "pgx-macros"
version = "0.6.0"
authors = ["ZomboDB, LLC <zombodb@gmail.com>"]
license = "MIT"
description = "Proc Macros for 'pgx'"
homepage = "https://github.com/tcdi/pgx"
repository = "https://github.com/tcdi/pgx"
documentation = "https://docs.rs/pgx-macros"
readme = "README.md"
edition = "2021"

[lib]
proc-macro = true

[package.metadata.docs.rs]
# Enable `#[cfg(docsrs)]` (https://docs.rs/about/builds#cross-compiling)
rustc-args = ["--cfg", "docsrs"]

[dependencies]
pgx-sql-entity-graph = { path = "../pgx-sql-entity-graph", version = "=0.6.0" }
proc-macro2 = "1.0.47"
quote = "1.0.21"
syn = { version = "1.0.104", features = [ "extra-traits", "full", "fold", "parsing" ] }

[dev-dependencies]
serde = { version = "1.0.148", features = ["derive"] } # for Documentation examples
