[package]
name = "pgx-macros"
version = "0.7.4"
authors = ["ZomboDB, LLC <zombodb@gmail.com>"]
license = "MIT"
description = "Proc Macros for 'pgx'"
homepage = "https://github.com/tcdi/pgx"
repository = "https://github.com/tcdi/pgx"
documentation = "https://docs.rs/pgx-macros"
readme = "README.md"
edition = "2021"

[lib]
proc-macro = true

[package.metadata.docs.rs]
# Enable `#[cfg(docsrs)]` (https://docs.rs/about/builds#cross-compiling)
rustc-args = ["--cfg", "docsrs"]

[features]
no-schema-generation = ["pgx-sql-entity-graph/no-schema-generation"]

[dependencies]
pgx-sql-entity-graph = { path = "../pgx-sql-entity-graph", version = "=0.7.4" }
proc-macro2 = "1.0.52"
quote = "1.0.26"
syn = { version = "1.0.109", features = [ "extra-traits", "full", "fold", "parsing" ] }

[dev-dependencies]
serde = { version = "1.0.156", features = ["derive"] } # for Documentation examples
