[package]
name = "pgx-pg-config"
version = "0.6.1"
authors = ["ZomboDB, LLC <zombodb@gmail.com>"]
license = "MIT"
description = "A Postgres pg_config wrapper for 'pgx'"
homepage = "https://github.com/tcdi/pgx"
repository = "https://github.com/tcdi/pgx"
documentation = "https://docs.rs/pgx-pg-config"
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0.0"
eyre = "0.6.8"
pathsearch = "0.2.0"
owo-colors = "3.5.0"
serde = { version = "1.0.149", features = [ "derive" ] }
serde_derive = "1.0.149"
serde_json = "1.0.89"
toml = "0.5.9"
url = "2.3.1"
