[package]
name = "pgx-pg-sys-stub"
edition = "2021"
version = "0.5.0-beta.0"
authors = ["ZomboDB, LLC <zombodb@gmail.com>"]
license = "MIT"
description = "A Postgres pg_config wrapper for 'pgx'"
homepage = "https://github.com/zombodb/pgx"
repository = "https://github.com/zombodb/pgx"
#documentation = "https://docs.rs/pgx-utils"
readme = "README.md"
rust-version = "1.58"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.8"
prettyplease = "0.1.10"
syn = { version = "1.0.95", features = [ "extra-traits", "full", "fold", "parsing" ] }
tracing = "0.1.34"
