[package]
name = "pgx-pg-sys"
version = "0.4.0-beta.0"
authors = ["ZomboDB, LLC <zombodb@gmail.com>"]
license = "MIT"
description = "Generated Rust bindings for Postgres internals, for use with 'pgx'"
homepage = "https://github.com/zombodb/pgx"
repository = "https://github.com/zombodb/pgx"
documentation = "https://docs.rs/pgx-pg-sys"
readme = "README.md"
edition = "2021"

[features]
default = [ ]
pg10 = [ ]
pg11 = [ ]
pg12 = [ ]
pg13 = [ ]
pg14 = [ ]

[package.metadata.docs.rs]
features = ["pg14"]
no-default-features = true
targets = ["x86_64-unknown-linux-gnu"]
# Enable `#[cfg(docsrs)]` (https://docs.rs/about/builds#cross-compiling)
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
memoffset = "0.6.5"
once_cell = "1.10.0"
pgx-macros = { path = "../pgx-macros/", version = "0.4.0-beta.0" }

[build-dependencies]
bindgen = { version = "0.59.2", default-features = false, features = ["runtime"] }
build-deps = "0.1.4"
owo-colors = "3.2.0"
num_cpus = "1.13.1"
pgx-utils = { path = "../pgx-utils/", version = "0.4.0-beta.0" }
proc-macro2 = "1.0.36"
quote = "1.0.15"
rayon = "1.5.1"
syn = { version = "1.0.86", features = [ "extra-traits", "full", "fold", "parsing" ] }
eyre = "0.6.7"
color-eyre = "0.6.1"
