[package]
name = "pgx-sql-entity-graph"
version = "0.6.0"
authors = ["ZomboDB, LLC <zombodb@gmail.com>"]
license = "MIT"
description = "Sql Entity Graph for `pgx`"
homepage = "https://github.com/tcdi/pgx"
repository = "https://github.com/tcdi/pgx"
documentation = "https://docs.rs/pgx-sql-entity-graph"
readme = "README.md"
edition = "2021"

[features]
syntax-highlighting = ["dep:syntect", "dep:owo-colors", "dep:atty"]
no-schema-generation = []

[dependencies]
seq-macro = "0.3"
cstr_core = "0.2"
convert_case = "0.5.0"
eyre = "0.6.8"
petgraph = "0.6.2"
proc-macro2 = { version = "1.0.47", features = [ "span-locations" ] }
quote = "1.0.21"
syn = { version = "1.0.104", features = [ "extra-traits", "full", "fold", "parsing" ] }
unescape = "0.1.0"
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.16", features = [ "env-filter" ] }

# colorized sql output
atty = { version = "0.2.14", optional = true }
owo-colors = { version = "3.5.0", optional = true }
syntect = { version = "5.0.0", default-features = false, features = ["default-fancy"], optional = true }
