[package]
name = "pgx-tests"
version = "0.5.2"
authors = ["ZomboDB, LLC <zombodb@gmail.com>"]
license = "MIT"
description = "Test framework for 'pgx'-based Postgres extensions"
homepage = "https://github.com/zombodb/pgx"
repository = "https://github.com/zombodb/pgx"
documentation = "https://docs.rs/pgx-tests"
readme = "README.md"
edition = "2021"

[lib]
crate-type = [ "cdylib", "lib" ]

[features]
default = [ ]
pg10 = [ "pgx/pg10" ]
pg11 = [ "pgx/pg11" ]
pg12 = [ "pgx/pg12" ]
pg13 = [ "pgx/pg13" ]
pg14 = [ "pgx/pg14" ]
pg_test = [ ]

[package.metadata.docs.rs]
features = ["pg14"]
no-default-features = true
targets = ["x86_64-unknown-linux-gnu"]
# Enable `#[cfg(docsrs)]` (https://docs.rs/about/builds#cross-compiling)
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
owo-colors = "3.5.0"
once_cell = "1.15.0"
libc = "0.2.135"
pgx-macros = { path = "../pgx-macros", version = "=0.5.2" }
pgx-pg-config = { path = "../pgx-pg-config", version = "=0.5.2" }
pgx-utils = { path = "../pgx-utils", version = "=0.5.2" }
postgres = "0.19.4"
regex = "1.6.0"
serde = "1.0.145"
serde_json = "1.0.86"
shutdown_hooks = "0.1.0"
time = "0.3.15"
eyre = "0.6.8"
thiserror = "1.0"

[dependencies.pgx]
path = "../pgx"
default-features = false
features = [ "time-crate" ] # testing purposes
version = "=0.5.2"
