[package]
name = "pgx-tests"
version = "0.6.1"
authors = ["ZomboDB, LLC <zombodb@gmail.com>"]
license = "MIT"
description = "Test framework for 'pgx'-based Postgres extensions"
homepage = "https://github.com/tcdi/pgx"
repository = "https://github.com/tcdi/pgx"
documentation = "https://docs.rs/pgx-tests"
readme = "README.md"
edition = "2021"

[lib]
crate-type = [ "cdylib", "lib" ]

[features]
default = [ ]
pg11 = [ "pgx/pg11" ]
pg12 = [ "pgx/pg12" ]
pg13 = [ "pgx/pg13" ]
pg14 = [ "pgx/pg14" ]
pg15 = [ "pgx/pg15" ]
pg_test = [ ]
cshim = [ "pgx/cshim" ]
no-schema-generation = [ "pgx/no-schema-generation", "pgx-macros/no-schema-generation" ]

[package.metadata.docs.rs]
features = ["pg14"]
no-default-features = true
targets = ["x86_64-unknown-linux-gnu"]
# Enable `#[cfg(docsrs)]` (https://docs.rs/about/builds#cross-compiling)
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
clap-cargo = "0.10.0"
owo-colors = "3.5.0"
once_cell = "1.16.0"
libc = "0.2.137"
pgx-macros = { path = "../pgx-macros", version = "=0.6.1" }
pgx-pg-config = { path = "../pgx-pg-config", version = "=0.6.1" }
postgres = "0.19.4"
regex = "1.7.0"
serde = "1.0.149"
serde_json = "1.0.89"
sysinfo = "0.27.0"
time = "0.3.17"
eyre = "0.6.8"
thiserror = "1.0"

[dependencies.pgx]
path = "../pgx"
default-features = false
features = [ "time-crate" ] # testing purposes
version = "=0.6.1"
