[package]
name = "pgx-utils"
version = "0.5.0"
authors = ["ZomboDB, LLC <zombodb@gmail.com>"]
license = "MIT"
description = "Utility functions for 'pgx'"
homepage = "https://github.com/zombodb/pgx"
repository = "https://github.com/zombodb/pgx"
documentation = "https://docs.rs/pgx-utils"
readme = "README.md"
edition = "2021"

[dependencies]
seq-macro = "0.3"
cstr_core = "0.2"
atty = "0.2.14"
convert_case = "0.5.0"
eyre = "0.6.8"
owo-colors = "3.5.0"
petgraph = "0.6.2"
proc-macro2 = { version = "1.0.46", features = [ "span-locations" ] }
quote = "1.0.21"
regex = "1.6.0"
serde = { version = "1.0.145", features = [ "derive" ] }
serde_derive = "1.0.145"
serde_json = "1.0.85"
syn = { version = "1.0.102", features = [ "extra-traits", "full", "fold", "parsing" ] }
syntect = { version = "5.0.0", default-features = false, features = ["default-fancy"] }
unescape = "0.1.0"
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.16", features = [ "env-filter" ] }
