[package]
name = "pgx-version-updater"
version = "0.0.0"
edition = "2021"
authors = ["ZomboDB, LLC <zombodb@gmail.com>"]
license = "MIT"
description = "Standalone tool to update PGX Cargo.toml versions and dependencies in preparation for a release."
homepage = "https://github.com/zombodb/pgx"
repository = "https://github.com/zombodb/pgx"
documentation = "https://docs.rs/pgx-utils"
readme = "README.md"

[dependencies]
clap = { version = "3.2.2", features = [ "env", "derive" ] }
owo-colors = "3.4.0"
toml_edit = { version = "0.14.4" }
walkdir = "2"
