[package]
name = "srf"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg12"]
pg10 = ["pgx/pg10"]
pg11 = ["pgx/pg11"]
pg12 = ["pgx/pg12"]
pg_test = []

[dependencies]
pgx = { path = "../../../pgx/pgx/", default-features = false }
pgx-macros = { path = "../../../pgx/pgx-macros" }
rand = "0.7.3"

[dev-dependencies]
pgx-tests = { path = "../../../pgx/pgx-tests" }

# uncomment these if compiling outside of 'pgx'
#[profile.dev]
#panic = "unwind"
#
#[profile.release]
#panic = "unwind"
#opt-level = 3
#lto = "fat"
#codegen-units = 1
