[package]
name = "shmem"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg13"]
pg11 = ["pgrx/pg11", "pgrx-tests/pg11" ]
pg12 = ["pgrx/pg12", "pgrx-tests/pg12" ]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13" ]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14" ]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15" ]
pg_test = []

[dependencies]
heapless = "0.7.16"
pgrx = { path = "../../pgrx", default-features = false }
serde = { version = "1.0.156", features = [ "derive" ] }

[dev-dependencies]
pgrx-tests = { path = "../../pgrx-tests" }

# uncomment these if compiling outside of 'pgrx'
# [profile.dev]
# panic = "unwind"

# [profile.release]
# panic = "unwind"
# opt-level = 3
# lto = "fat"
# codegen-units = 1
