[package]
name = "arrays"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

# remove this empty 'workspace' declaration if compiling outside of 'pgx'
[workspace]

[features]
default = ["pg12"]
pg10 = ["pgx/pg10"]
pg11 = ["pgx/pg11"]
pg12 = ["pgx/pg12"]
pg_test = []

[dependencies]
pgx = { path = "../../../pgx/pgx/", default-features = false }
pgx-macros = { path = "../../../pgx/pgx-macros" }
serde = "1.0.115"

[dev-dependencies]
pgx-tests = { path = "../../../pgx/pgx-tests" }

# uncomment these if compiling outside of 'pgx'
#[profile.dev]
#panic = "unwind"
#
#[profile.release]
#panic = "unwind"
#opt-level = 3
#lto = "fat"
#codegen-units = 1
