[package]
name = "shmem"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

# remove this empty 'workspace' declaration if compiling outside of 'pgx'
[workspace]

[features]
default = ["pg13"]
pg10 = ["pgx/pg10", "pgx-tests/pg10" ]
pg11 = ["pgx/pg11", "pgx-tests/pg11" ]
pg12 = ["pgx/pg12", "pgx-tests/pg12" ]
pg13 = ["pgx/pg13", "pgx-tests/pg13" ]
pg_test = []

[dependencies]
heapless = "0.5.6"
pgx = { path = "../../../pgx/pgx/", default-features = false }
pgx-macros = { path = "../../../pgx/pgx-macros" }
serde = { version = "1.0.114", features = [ "derive" ] }

[dev-dependencies]
pgx-tests = { path = "../../../pgx/pgx-tests" }

# uncomment these if compiling outside of 'pgx'
#[profile.dev]
#panic = "unwind"
#
#[profile.release]
#panic = "unwind"
#opt-level = 3
#lto = "fat"
#codegen-units = 1
